Div cover for maps facade

--- a/MyMapsGeTypeScript/ge/mymaps/map/view/TbilisiMapView-test.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/view/TbilisiMapView-test.html
@@ -11,7 +11,7 @@
             }
             #list{
                 position: absolute;
-        
+                display:none;
                 top:0px;
                 right:0px;
                 bottom:0px;
@@ -21,10 +21,11 @@
     </head>
 
     <body>
-    
+    <div style="width:30%;height:490px; left:50px;">
        <tbilisi-map-view id="mapView">
 
        </tbilisi-map-view>
+   </div>
         <map-type-list id="list">
 
         </map-type-list>
