--- a/MyMapsGeTypeScript/ge/mymaps/map/view/TbilisiMapView.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/view/TbilisiMapView.html
@@ -1,19 +1,19 @@
-﻿<dom-module id="tbilisi-map-view">
+﻿<dom-module id="tbilisi-map-view" >
     <template>
       <style>  
+       
         #leafletView
         {
-           width:  100vw;
-            height:100vh;
-            position: fixed;
+            display:block;
             margin:0px;
             padding:0px;
-  
+            height:100%;
+            width:100%;
             background-color:grey;
-            overflow: hidden;
+        
         }
         </style>
-        <div id="leafletView" >
+        <div id="leafletView" flex >
 
         </div>
     </template>
