addOrganization, removeOrganization, clearOrganizations

--- a/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.html
@@ -1,4 +1,4 @@
-﻿<dom-module id="tbilisi-map-view" >
+﻿<dom-module id="ge-map-view" >
     <template>
       <style>  
        
@@ -19,4 +19,4 @@
     </template>
 
 </dom-module>
-<script src="TbilisiMapView.js"></script>
+<script src="GeMapView.js"></script>
