--- a/MyMapsGeTypeScript/ge/mymaps/map/view/TbilisiMapView-test.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/view/TbilisiMapView-test.html
@@ -22,9 +22,9 @@
 
     <body>
     <div style="width:30%;height:490px; left:50px;">
-       <tbilisi-map-view id="mapView">
+       <ge-map-view id="mapView">
 
-       </tbilisi-map-view>
+       </ge-map-view>
    </div>
         <map-type-list id="list">
 
