--- a/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.html
@@ -16,6 +16,9 @@
         <div id="leafletView" flex >
 
         </div>
+        <div id="geRoundDiv" style="display:none;width:50px;height:50px; position:absolute; left:150px; top: 150px;">
+            <canvas id="geRoundCanvas" style="display:block;"></canvas>
+        </div>
     </template>
 
 </dom-module>
