--- a/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.html
+++ b/MyMapsGeTypeScript/ge/mymaps/map/view/GeMapView.html
@@ -16,7 +16,7 @@
         <div id="leafletView" flex >
 
         </div>
-        <div id="geRoundDiv" style="display:none;width:50px;height:50px; position:absolute; left:150px; top: 150px;">
+        <div id="geRoundDiv" style="display:none;width:50px;height:50px; position:absolute; left:150px; top: 150px; pointer-events:none;">
             <canvas id="geRoundCanvas" style="display:block;"></canvas>
         </div>
     </template>
